Bug 263730 - nepomuk continues to index although there is not virtuoso process
Summary: nepomuk continues to index although there is not virtuoso process
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-20 11:39 UTC by S. Burmeister
Modified: 2012-08-03 00:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description S. Burmeister 2011-01-20 11:39:49 UTC
Version:           unspecified (using KDE 4.5.95) 
OS:                Linux

If virtuoso is killed while nepomuk indexes the indexing does not stop and nepomuk spams the .xsession-errors file with [/usr/bin/nepomukservicestub] "/usr/bin/nepomukservicestub(20818)" Soprano: "SQLExecDirect failed on query 'sparql insert into graph ...

Expected beahviour: Stop indexing if there is no db available.

Since this leads to .xsession-errors increasing in size at ~1MB per second it may as well fill you home and prevent you from logging in or even crash applications that would need some space in home to save files etc.

Reproducible: Always
Comment 1 Sebastian Trueg 2011-01-20 17:13:34 UTC
Apart from the fact that this needs fixing indeed: how did Virtuoso die? Did you kill it or did it crash?
Comment 2 S. Burmeister 2011-01-20 17:40:17 UTC
I had to kill it because it was using one core all the time.
Comment 3 Sebastian Trueg 2011-10-25 08:28:45 UTC
Git commit 7657a1f7f3b9ee352ac25b2ca4802ca5d654f7d0 by Sebastian Trueg.
Committed on 25/10/2011 at 10:27.
Pushed by trueg into branch 'KDE/4.7'.

Re-create the repository in case of an un-scheduled shutdown of the DB.

This is a hacky way of ensuring that Nepomuk even works after a crash
or a third-party kill of the Virtuoso instance. "Hacky" because it does
not care about clients which will get some query errors during the
restart.

BUG: 263730

FIXED-IN: 4.7.3

M  +21   -2    nepomuk/services/storage/repository.cpp
M  +1    -0    nepomuk/services/storage/repository.h

http://commits.kde.org/kde-runtime/7657a1f7f3b9ee352ac25b2ca4802ca5d654f7d0
Comment 4 Sebastian Trueg 2011-10-25 08:31:33 UTC
Git commit cc5cf57c7e5be45fbf757414994290dd58ea1231 by Sebastian Trueg.
Committed on 25/10/2011 at 10:27.
Pushed by trueg into branch 'master'.

Re-create the repository in case of an un-scheduled shutdown of the DB.

This is a hacky way of ensuring that Nepomuk even works after a crash
or a third-party kill of the Virtuoso instance. "Hacky" because it does
not care about clients which will get some query errors during the
restart.

BUG: 263730

FIXED-IN: 4.7.3

M  +21   -2    nepomuk/services/storage/repository.cpp
M  +1    -0    nepomuk/services/storage/repository.h

http://commits.kde.org/kde-runtime/cc5cf57c7e5be45fbf757414994290dd58ea1231
Comment 5 Sebastian Trueg 2011-10-25 08:31:52 UTC
Git commit ceaa1e22a5279bdef0f451d09c0d27bbaa447035 by Sebastian Trueg.
Committed on 25/10/2011 at 10:20.
Pushed by trueg into branch 'master'.

Re-create the repository in case of an un-scheduled shutdown of the DB.

This is a hacky way of ensuring that Nepomuk even works after a crash
or a third-party kill of the Virtuoso instance. "Hacky" because it does
not care about clients which will get some query errors during the
restart.

BUG: 263730

M  +21   -2    services/storage/repository.cpp
M  +1    -0    services/storage/repository.h

http://commits.kde.org/nepomuk-core/ceaa1e22a5279bdef0f451d09c0d27bbaa447035