Re-create the repository in case of an un-scheduled shutdown of the DB.

This is a hacky way of ensuring that Nepomuk even works after a crash
or a third-party kill of the Virtuoso instance. "Hacky" because it does
not care about clients which will get some query errors during the
restart.

BUG: 263730

FIXED-IN: 4.7.3